2012-11-03  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/sugar/functions/which_min.h : sugar which.min
        * include/Rcpp/sugar/functions/which_max.h : sugar which.max
        * include/Rcpp/module/Module.h : added get_function_ptr which returns
        the pointer of the target function as a DL_FUNC

2012-11-02  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runit.rmath.R: More tests added

2012-11-02  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/module/CppFunction.h : factored CppFunction in its own
	file and added the get_function_ptr virtual method. added
	documentation
        * include/Rcpp/module/Module_generated_CppFunction.h: implementation
	of get_function_ptr in classes that derive CppFunction
        * src/Module.cpp: s/get_function_ptr/get_function/
        * include/Rcpp/module/Module.h : factored out and documented.
	s/get_function_ptr/get_function/

2012-11-01  Dirk Eddelbuettel  <edd@debian.org>
      
	* inst/unitTests/runit.rmath.R: New unit test file added

2012-11-01  JJ Allaire <jj@rstudio.org>

	* R/Attributes.R: change 'envir' param to 'env' for consistency with
	the interface of loadModule
	* man/sourceCpp.Rd: documentation updates
	* man/cppFunction.Rd: documentation updates

2012-11-01  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/sugar/logical/or.h : implementing x | y where x and y
	are Logical sugar expressions
        * include/Rcpp/sugar/logical/and.h : implementing x & y where x and y
	are Logical sugar expressions

2012-10-31  JJ Allaire <jj@rstudio.org>

	* R/Attributes.R: add cppFunction for inline-style definitions;
	change 'local' param to (more clear and explicit) 'envir' param;
	change 'show.output' param to 'showOutput'; add parameter to
	onBuild hook to indicate if the source was from a 'code' parameter
	* src/Attributes.cpp: factored parser into it's own file
	* src/AttributesParser.h: attributes parser header